implement "PATCH /articles/{articleId}/comment"
