# api/routes/article_controller.js
@@ -21,7 +21,25 @@ router.get("/", validator.get_articles, async (req, res) => {
   res.json(articles)
 })
 
-router.put("/:id", validator.update_article, async (req, res) => {
+// router.router.put("/:id", validator.update_article, async (req, res) => {
+//   const errors = validationResult(req)
+//   if (!errors.isEmpty()) {
+//     return res.status(400).json({ errors: errors.mapped() })
+//   }
+
+//   const queryData = matchedData(req)
+//   const id = queryData.id
+//   const url = queryData.url
+//   const tags = queryData.tags
+//   const comment = queryData.comment
+
+//   const articleService = new ArticleService()
+//   const article = await articleService.updateArticle(id, url, tags, comment)
+
+//   res.json(article)
+// })
+
+router.patch("/:id/comment", validator.update_comment, async (req, res) => {
   const errors = validationResult(req)
   if (!errors.isEmpty()) {
     return res.status(400).json({ errors: errors.mapped() })
@@ -29,12 +47,13 @@ router.put("/:id", validator.update_article, async (req, res) => {
 
   const queryData = matchedData(req)
   const id = queryData.id
-  const url = queryData.url
-  const tags = queryData.tags
   const comment = queryData.comment
 
   const articleService = new ArticleService()
-  const article = await articleService.updateArticle(id, url, tags, comment)
+  const article = await articleService.updateComment(id, comment)
+  if (article === null) {
+    return res.status(404).json({ errors: {} })
+  }
 
   res.json(article)
 })
